--- a/index.html
+++ b/index.html
@@ -9,39 +9,43 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   </head>
   <body>
-    <header class="header-wrapper mdc-layout-grid">
-      <div class="mdc-layout-grid__inner">
-        <h1 class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-          Search news
-        </h1>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 mdc-select sources-wrapper">
-          <input type="hidden" name="enhanced-select" />
-          <i class="mdc-select__dropdown-icon"></i>
-          <div class="mdc-select__selected-text"></div>
-          <div class="mdc-select__menu mdc-menu mdc-menu-surface">
-            <ul class="mdc-list sources-list">
-              <li
-                class="mdc-list-item mdc-list-item--selected"
-                data-value=""
-                aria-selected="true"
-              ></li>
-            </ul>
+    <header class="header-wrapper">
+      <div class="central-wrapper mdc-layout-grid">
+        <div class="mdc-layout-grid__inner">
+          <h1
+            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet"
+          >
+            Search news
+          </h1>
+          <div
+            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 mdc-select sources-wrapper"
+          >
+            <input type="hidden" name="enhanced-select" />
+            <i class="mdc-select__dropdown-icon"></i>
+            <div class="mdc-select__selected-text"></div>
+            <div class="mdc-select__menu mdc-menu mdc-menu-surface">
+              <ul class="mdc-list sources-list">
+                <li
+                  class="mdc-list-item mdc-list-item--selected"
+                  data-value=""
+                  aria-selected="true"
+                ></li>
+              </ul>
+            </div>
+            <span class="mdc-floating-label">Choose news agency</span>
+            <div class="mdc-line-ripple"></div>
           </div>
-          <span class="mdc-floating-label">Choose news agency</span>
-          <div class="mdc-line-ripple"></div>
         </div>
       </div>
     </header>
 
-    <main>
-      <div class="central-wrapper">
-        <div class="mdc-layout-grid">
-          <div class="mdc-layout-grid__inner news-grid-wrapper"></div>
-        </div>
+    <main class="main-wrapper">
+      <div class="central-wrapper mdc-layout-grid">
+        <div class="mdc-layout-grid__inner news-grid-wrapper"></div>
       </div>
     </main>
 
-    <footer>
+    <footer class="footer-wrapper">
       <p>
         Powered by
         <a href="https://newsapi.org" target="_blank">
