change links in index.html, delete dist from .gitignore

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="app.bundle.css" />
+    <link rel="stylesheet" href="./dist/app.bundle.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   </head>
   <body>
@@ -54,6 +54,6 @@
       </p>
     </footer>
 
-    <script src="app.bundle.js" async></script>
+    <script src="./dist/app.bundle.js" async></script>
   </body>
 </html>
