--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
         </a>
       </p>
     </footer>
+    <script type="text/javascript" src="./dist/app.bundle.js"></script>
   </body>
 </html>
